[package]
name = "rand-num-consensus"
version = "0.1.0"
edition = "2021"
authors = ["Dylan Downey"]
description = "Decentralized, asynchronous random number consensus"
license = "MIT OR Apache-2.0"
keywords = ["random", "consensus", "protocol", "networking", "decentralized"]
categories = ["network-programming"]

[dependencies]
ed25519-dalek = "=2.1.1"
x25519-dalek = { version = "2.0.1", features = ["static_secrets", "getrandom"] }
bincode = "1.3.3"
aes-gcm = "0.10.3"
rand = "0.8.5"
serde = { version = "1.0.204", features = ["derive"] }
